[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmo"
# Version is derived from the git tag (CalVer YEAR.N) by setuptools-scm; see
# [tool.setuptools_scm] below and scripts/next_version.sh.
dynamic = ["version"]
description = "COarse-grained Simulation of intrinsically disordered prOteins (HPS / Mpipi models), built on OpenMM."
readme = "README.md"
requires-python = ">=3.9"
# Runtime dependencies of `import cosmo`. Floors are the oldest versions known
# to work; no upper caps (runs on current releases, e.g. numpy 2.x / openmm 8.x).
# Analysis-only packages used by scripts/ (scipy, matplotlib, numba, ...) are
# intentionally not listed here; see requirements.txt.
dependencies = [
    "numpy>=1.22",
    "openmm>=7.7",
    "parmed>=3.4",
    "MDAnalysis>=2.2",
    "mdtraj>=1.9.7",
    "pandas>=1.4",
]

[project.scripts]
# Canonical simulation runner: `cosmo-mdrun -f md.ini`
cosmo-mdrun = "cosmo.mdrun:mdrun"
# Back-compat alias for the historical name; routes to the same runner.
cosmo-simulation = "cosmo.mdrun:mdrun"
# O'Brien Continuous Synthesis Protocol (per-codon, 3-stage): `cosmo-csp -f csp.ini`
cosmo-csp = "cosmo.csp.protocol:csp"
# Cylinder ribosome model (analytic exit tunnel; one MD segment/residue, same
# O'Brien codon kinetics): `cosmo-cylinder -f cylinder.ini`
cosmo-cylinder = "cosmo.csp.cylinder:cylinder"
# Stitch the CSP per-residue/-stage trajectories into one VMD movie.
cosmo-csp-movie = "cosmo.csp.movie:main"
# Pre-generate a fastest/slowest synonymous-codon mRNA for a protein (same prep the
# runners do for `mrna = fastest/slowest`):
# `cosmo-make-mrna --pdb prot.pdb --codon-times table.txt --mode fastest`
cosmo-make-mrna = "cosmo.csp.synth_mrna:main"

[tool.setuptools_scm]
# Version from git tags (e.g. 2026.1). Between tags, a dev version is derived.
# Drop the "+g<hash>" local part so dev versions stay PyPI-upload-clean.
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
# Only ship the importable package (not docs/tutorials/scripts at the repo root).
include = ["cosmo*"]
